--- a/MyFirstIphoneApp/Base.lproj/Main.storyboard
+++ b/MyFirstIphoneApp/Base.lproj/Main.storyboard
@@ -26,6 +26,9 @@
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="BYZ-38-t0r" id="jse-PO-8mG"/>
+                                        </connections>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Keb-uN-Vas">
                                         <rect key="frame" x="171" y="36" width="32" height="30"/>
