added vie controller2

--- a/MyFirstIphoneApp/Base.lproj/Main.storyboard
+++ b/MyFirstIphoneApp/Base.lproj/Main.storyboard
@@ -74,7 +74,22 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="131.8840579710145" y="95.758928571428569"/>
+            <point key="canvasLocation" x="290" y="-379"/>
+        </scene>
+        <!--View Controller2-->
+        <scene sceneID="R3T-sw-ceh">
+            <objects>
+                <viewController storyboardIdentifier="viewController2" id="ejY-CT-hRT" customClass="ViewController2" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BoW-QX-AJF">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="cI3-cT-RbM"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="m6L-eJ-MBe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1070" y="-379"/>
         </scene>
     </scenes>
 </document>
