--- a/MyFirstIphoneApp/Base.lproj/Main.storyboard
+++ b/MyFirstIphoneApp/Base.lproj/Main.storyboard
@@ -54,14 +54,20 @@
                                     <constraint firstAttribute="bottom" secondItem="sd5-2m-fBd" secondAttribute="bottom" constant="23" id="zvQ-gt-uTB"/>
                                 </constraints>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UBs-Ey-Hl1">
+                                <rect key="frame" x="352" y="44" width="42" height="30"/>
+                                <state key="normal" title="Avanti"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="BpC-Pm-PzH" secondAttribute="trailing" constant="28" id="4XI-FB-Wos"/>
+                            <constraint firstItem="UBs-Ey-Hl1" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="9jO-fS-vS4"/>
                             <constraint firstItem="5pg-KS-V8T" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Dec-Cb-hrj"/>
                             <constraint firstItem="5pg-KS-V8T" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="JoP-1l-qAU"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5pg-KS-V8T" secondAttribute="trailing" constant="20" id="Qew-Gg-T8N"/>
                             <constraint firstItem="BpC-Pm-PzH" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="28" id="bkt-Rn-Ske"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="UBs-Ey-Hl1" secondAttribute="trailing" constant="20" id="fDq-5y-aN4"/>
                             <constraint firstItem="BpC-Pm-PzH" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="348" id="mtD-Uh-fSb"/>
                             <constraint firstItem="5pg-KS-V8T" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="rbj-wf-eq6"/>
                         </constraints>
