--- a/MyFirstIphoneApp/Base.lproj/Main.storyboard
+++ b/MyFirstIphoneApp/Base.lproj/Main.storyboard
@@ -57,6 +57,9 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UBs-Ey-Hl1">
                                 <rect key="frame" x="352" y="44" width="42" height="30"/>
                                 <state key="normal" title="Avanti"/>
+                                <connections>
+                                    <action selector="goToNextViewController:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gLU-Sl-y3G"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
